fix icon overlap

--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,13 @@
   width: 7rem;
   border: 3px solid black;
   border-radius: 50%;
+  position: absolute;
 }
 
 .iconContainer img {
   max-width: 100%;
+}
+
+.mainContainer {
+  position: relative;
 }
